--- a/index.html
+++ b/index.html
@@ -4,11 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stelysheet" href="./styles/index.css"/>
+    <link rel="stylesheet" href="./styles/index.css"/>
     <script src="./scripts/index.js"></script>
     <title>quote from Kanye</title>
 </head>
-<body>
-    
+<body class="page">
+    <header class="header">
+        <div class="header__top">
+            <h1 class="header__heading">quote</h1>
+        </div>
+    </header>
+    <main class="main">
+
+    </main>
 </body>
 </html>
