--- a/index.html
+++ b/index.html
@@ -15,7 +15,13 @@
         </div>
     </header>
     <main class="main">
-
+        <section class="cite-section">
+            <h2 class="cite-section__cite">lalala</h2>
+        </section>
+        <div>
+            <h2></h2>
+            <a href="" target="_blank"></a>
+        </div>
     </main>
 </body>
 </html>
