--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles/index.css"/>
-    <script src="./scripts/index.js" type="module"></script>
     <title>quote from Kanye</title>
 </head>
 <body class="page">
@@ -16,16 +15,14 @@
     </header>
     <main class="main">
         <section class="cite-section">
-            <h2 class="cite-section__cite">
-                Таким образом, мы получаем свойства объекта без необходимости выполнять объемный цикл. 
-                В задаче можно использовать этот способ со свойством .length — для проверки того, есть ли в 
-                обеих строках одинаковое количество символов — это важная особенность анаграмм.
-            </h2>
+            <h2 class="cite-section__cite"></h2>
         </section>
         <div>
             <h2></h2>
             <a href="" target="_blank"></a>
         </div>
     </main>
+
+    <script src="./scripts/index.js" type="module"></script>
 </body>
 </html>
