fear/add refresh button

--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
     <main class="main">
         <section class="cite-section">
             <h2 class="cite-section__cite"></h2>
+            <div class="cite-section__refresh-btn">
+                <img class="cite-section__refresh-btn-image" src="./images/icons8-refresh.svg" alt="refresh icon">
+            </div>
         </section>
         <div>
             <h2></h2>
