feat/create linkedin link

--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
                 <img class="cite-section__refresh-btn-image" src="./images/icons8-refresh.svg" alt="refresh icon">
             </div>
         </section>
-        <div>
-            <h2></h2>
-            <a href="" target="_blank"></a>
+        <div class="my-link">
+            <h2 class="my-link__heading">My linkedIn</h2>
+            <a class="my-link__link" href="" target="_blank"></a>
         </div>
     </main>
 
