feat/create footer

--- a/index.html
+++ b/index.html
@@ -20,10 +20,9 @@
                 <img class="cite-section__refresh-btn-image" src="./images/icons8-refresh.svg" alt="refresh icon">
             </div>
         </section>
-        <div class="my-link">
-            <h2 class="my-link__heading">My linkedIn</h2>
-            <a class="my-link__link" href="" target="_blank"></a>
-        </div>
+        <footer class="my-link">
+            <a class="my-link__link" href="https://www.linkedin.com/in/herman-barodzich-b794b4229/" target="_blank">My linkedIn</a>
+        </footer>
     </main>
 
     <script src="./scripts/index.js" type="module"></script>
